--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es2020": true
+	},
+	"extends": ["next/core-web-vitals", "plugin:react/recommended", "prettier"],
+	"parserOptions": {
+		"ecmaVersion": 2018
+	},
+	"rules": {
+		"indentation": "tab"
+	}
 }
