--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "burger",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
-  }
+	"name": "burger",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next/font": "^13.3.2",
+		"@storyblok/react": "^2.0.18",
+		"next": "13.3.1",
+		"next-seo": "6.0.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sass": "1.32.4"
+	},
+	"devDependencies": {
+		"@types/node": "18.16.3",
+		"@types/react": "18.2.0",
+		"@types/react-dom": "18.2.1",
+		"eslint": "8.39.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-react": "^7.32.2",
+		"prettier": "2.8.8",
+		"standard": "^17.0.0",
+		"stylelint": "^15.6.0",
+		"stylelint-config-standard": "^33.0.0",
+		"stylelint-order": "^6.0.3",
+		"typescript": "5.0.4"
+	}
 }
