--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest --ci --runInBand"
 	},
 	"dependencies": {
 		"@next/font": "^13.3.2",
@@ -18,12 +19,21 @@
 		"sass": "1.32.4"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^9.2.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "14.0.0",
+		"@testing-library/react-hooks": "^8.0.1",
+		"@testing-library/user-event": "^14.4.3",
 		"@types/node": "18.16.3",
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
+		"babel-jest": "27.0.6",
 		"eslint": "8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-react": "^7.32.2",
+		"jest": "29.5.0",
+		"jest-cli": "29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
 		"prettier": "2.8.8",
 		"standard": "^17.0.0",
 		"stylelint": "^15.6.0",
