--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@next/font": "^13.3.2",
 		"@storyblok/react": "^2.0.18",
+		"@trendyol-js/react-carousel": "^3.0.2",
 		"next": "13.3.1",
 		"next-seo": "6.0.0",
 		"react": "18.2.0",
