--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,19 @@
 {
 	"env": {
 		"browser": true,
-		"es2020": true
+		"es2020": true,
+		"commonjs": true,
+		"node": true
 	},
-	"extends": ["next/core-web-vitals", "plugin:react/recommended", "prettier"],
+	"extends": ["prettier", "plugin:react/recommended"],
 	"parserOptions": {
-		"ecmaVersion": 2018
+		"ecmaVersion": 8,
+		"sourceType": "module"
 	},
 	"rules": {
-		"indentation": "tab"
-	}
+		"indent": ["warn", "tab"],
+		"react/react-in-jsx-scope": "off",
+		"react/prop-types": "off"
+	},
+	"parser": "@babel/eslint-parser"
 }
