--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
 		"test": "jest --ci --runInBand"
 	},
 	"dependencies": {
-		"@next/font": "^13.3.2",
 		"@storyblok/react": "^2.0.18",
 		"@trendyol-js/react-carousel": "^3.0.2",
-		"next": "13.3.1",
+		"next": "12.3.4",
 		"next-seo": "6.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "1.32.4"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.21.8",
+		"@babel/preset-react": "7.18.6",
+		"@babel/eslint-parser": "^7.21.8",
+		"@babel/preset-env": "7.21.5",
 		"@testing-library/dom": "^9.2.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "14.0.0",
@@ -28,8 +31,9 @@
 		"@types/node": "18.16.3",
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
+		"babel-eslint": "^10.1.0",
 		"babel-jest": "27.0.6",
-		"eslint": "8.39.0",
+		"eslint": "8.40.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-react": "^7.32.2",
 		"jest": "29.5.0",
